[tool.poetry]
name = "dynamic-graph-embedding"
version = "0.1.0"
description = "Dynamic Graph Embedding and Analysis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "baseline" },
    { include = "evaluation" },
    { include = "preprocessing" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
networkx = "^2.6"
torch = {version = ">=1.9.0", markers = "sys_platform == 'linux'"}
# torch-geometric = "^2.0.0"  # Commented out temporarily for testing setup
scikit-learn = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=baseline",
    "--cov=evaluation",
    "--cov=preprocessing",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    # "--cov-fail-under=80",  # Uncomment when actual tests are written
    "-vv",
    "--tb=short",
    "--maxfail=3",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (use -m 'not slow' to skip)",
    "network: Tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["baseline", "evaluation", "preprocessing"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 0  # Set to 80 when actual tests are written

[tool.coverage.html]
directory = "htmlcov"
title = "Dynamic Graph Embedding Test Coverage"

[tool.coverage.xml]
output = "coverage.xml"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true